welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:1: error: not found: value n
def parotTrouble(talking:Boolean, hour:Int):Boolean = {if (talking && (n<7 || n > 20)) {true} else {false}} 
                                                                       ^parotTrouble:1: error: not found: value n
def parotTrouble(talking:Boolean, hour:Int):Boolean = {if (talking && (n<7 || n > 20)) {true} else {false}} 
                                                                              ^